--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="_12_34pm">12:34 pm</string>
     <string name="incorrect_email_err">Incorrect email address</string>
     <string name="unequal_pass_err">Passwords are not equal</string>
+    <string name="chats">Chats</string>
+    <string name="gruops">Groups</string>
+    <string name="contactss">Contacts</string>
+    <string name="profile">Profile</string>
 </resources>
