--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="gruops">Groups</string>
     <string name="contactss">Contacts</string>
     <string name="profile">Profile</string>
+    <string name="hello_how_aure_you">hello how aure you?</string>
+    <string name="_22_15">22:15</string>
 </resources>
