--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="profile">Profile</string>
     <string name="hello_how_aure_you">hello how aure you?</string>
     <string name="_22_15">22:15</string>
+    <string name="type_message_here">Type message here...</string>
+    <string name="ivan_ivanov">Ivan Ivanov</string>
+    <string name="last_seen_at_12_45">last seen at 12:45</string>
 </resources>
